# SmartPatrol-nvr

./: CMakeLists.txt  README.md  main.cpp
config/: config.ini
include/business_layer/: ai_detector_service.h  interaction_service.h  mqtt_service.h  sensor_service.h  video_processor.h  video_service.h
include/common/: config.h  data_queue.h  logger.h
include/data_layer/: sensor_reader.h  video_capture.h  video_data_object.h
include/interfaces/: iai_detector.h  ialarm.h  isensor.h  ivideo.h
include/nvr/branks/hikvision/: HikDevice.h
include/nvr/interfaces/: INVR.h
include/presentation_layer/: http_service.h  sensor_monitor.h
lib/rknn/utils/: image_utils.c
src/: CMakeLists.txt
src/business_layer/video/: Camera.cpp  HKVDevice.cpp  VideoService.cpp
src/common/: config.cpp  logger.cpp
src/data_layer/: camera.cpp  frame_data.cpp
